fix dark mode bg for space icons

--- a/src/scss/theme/dark/common.scss
+++ b/src/scss/theme/dark/common.scss
@@ -236,6 +236,8 @@ html.themeDark {
     .iconObject.withLetter
     { background-color: $colorBgIcon; }
 
+	.iconObject.withOption.isSpace { background: #fff; }
+
     /* EditorControls */
 
     .editorControls {
